--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,9 +64,9 @@
             android:id="@+id/oriList"
             android:layout_width="0dp"
             android:layout_height="20pt"
-            android:gravity="center"
             android:layout_weight="0.24"
             android:entries="@array/tempList"
+            android:gravity="center"
             android:prompt="@string/inputPrompt"
             android:spinnerMode="dialog" />
 
@@ -101,12 +101,38 @@
             android:id="@+id/convList"
             android:layout_width="0dp"
             android:layout_height="20pt"
-            android:gravity="center"
             android:layout_weight="0.24"
             android:entries="@array/tempList"
+            android:gravity="center"
             android:prompt="@string/inputPrompt"
             android:spinnerMode="dialog" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/child2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/child1"
+        android:layout_marginTop="5pt"
+        android:orientation="horizontal">
+
+        <CheckBox
+            android:id="@+id/chkRounded"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:gravity="center"
+            android:text="@string/chkRound"
+            android:textSize="8pt" />
+
+        <CheckBox
+            android:id="@+id/chkFormula"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/chkForm"
+            android:textSize="8pt" />
     </LinearLayout>
 
 </RelativeLayout>
