--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -162,8 +162,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/rbWeight" />
-
-
     </RadioGroup>
+
+    <ImageView
+        android:id="@+id/img"
+        android:layout_width="89dp"
+        android:layout_height="89dp"
+        android:src="@drawable/temperature"
+        android:layout_marginTop="11dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/radioGroup"/>
 
 </RelativeLayout>
